developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Secured_Party__c/OJSERLIB__VEDA_PPSR_Secured_Party__c.object-meta.xml
<CustomObject>
    <label>VEDA PPSR Secured Party</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Secured Party Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VEDA PPSR Secured Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>