developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Secured_Party__c/fields/OJSERLIB__Given_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Given_Name__c</fullName>
    <label>Given Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>