developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Secured_Party__c/fields/OJSERLIB__Organisation_Number__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Organisation_Number__c</fullName>
    <label>Organisation Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>