developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Secured_Party__c/fields/OJSERLIB__VEDA_PPSR_Registration_Detail__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_PPSR_Registration_Detail__c</fullName>
    <label>VEDA PPSR Registration Detail</label>
    <referenceTo>OJSERLIB__VEDA_PPSR_Registration_Detail__c</referenceTo>
    <relationshipLabel>VEDA PPSR Secured Parties</relationshipLabel>
    <relationshipName>VEDA_PPSR_Secured_Parties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>